truncated caption text on grid view, cleaned up small sreen display for grid view, fixed up edit photo form.

--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -86,6 +86,8 @@ body#show.photos {
     border: 1px solid #ccc;
     padding: 1em 1em 2em 1em; 
     @include border-radius(2px);
+    margin-bottom: 1em; 
+
     img {
       max-width: 100%;
     }
@@ -108,7 +110,7 @@ body#show.photos {
       img {
         max-width: 100%;
       }
-      .caption {margin-top: 0.8em; color: $text-color; height: 3em;}
+      .caption {margin-top: 0.8em; color: $text-color; height: 4.6em; overflow: hidden; }
     }
     .admin {
       text-align: center;
@@ -117,6 +119,19 @@ body#show.photos {
       @include clearfix;
       .delete {float: right;}
       .edit {float: left;}
+    }
+  }
+
+  @media screen and (max-width: $break-pc-normal) {
+    .photo {
+      @include span-columns(4); 
+    }
+  }
+
+  @media screen and (max-width: $break-android_ls) {
+    .photo {
+      @include span-columns(6); 
+      @include nth-omega(2n);
     }
   }
 
