--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -20,3 +20,4 @@ $color-light-grey: #c8c8c8;
 $break-iport: 320px;
 $break-ils: 480px;
 $break-android_ls: 640px;
+$break-pc-normal: 980px;
